--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/7/20"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/7/21"
    ]
   },
   {
@@ -103,11 +103,12 @@
     "# *** Ground data: Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
-    "data_name = 'SID22_20231024-0049.cdf'\n",
-    "\n",
+    "data_name_list = ['SID22_20231024-0049.cdf',\n",
+    "                 ]\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'    # CDF data folder\n",
-    "data_name = 'SID22_Seq06.cdf'\n"
+    "data_name_list = ['SID22_Seq06.cdf',\n",
+    "                 ]\n"
    ]
   },
   {
@@ -120,8 +121,29 @@
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID22_20240126T091728_V01.cdf'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID22_20240126T091728_V01.cdf',\n",
+    "                 ]\n",
     "\"\"\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d298803a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Group read\n",
+    "\"\"\"\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/05/23/'        # CDF data folder\n",
+    "data_name = '*SID4*.cdf'\n",
+    "cdf_file = data_dir + data_name\n",
+    "data_name_list = glob.glob(cdf_file)\n",
+    "num_list = len(data_name_list)\n",
+    "data_name_list.sort()\n",
+    "for i in range(num_list):\n",
+    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
     "\"\"\""
    ]
   },
@@ -137,27 +159,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6269a115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class struct:\n",
+    "    pass\n",
+    "\n",
+    "data = struct()\n",
+    "num_list = len(data_name_list)\n",
+    "\n",
+    "for i in range(num_list):\n",
+    "    data_name = data_name_list[i]\n",
+    "    cdf_file = data_dir + data_name\n",
+    "    print(i, cdf_file)\n",
+    "\n",
+    "    cdf = pycdf.CDF(cdf_file)\n",
+    "    data1 = juice_sid22.hf_sid22_read(cdf)\n",
+    "\n",
+    "    if i==0:\n",
+    "        data = data1\n",
+    "        print(data.auto_corr.shape)\n",
+    "    else:\n",
+    "        data = juice_sid22.hf_sid22_add(data, data1)\n",
+    "        print(data.auto_corr.shape)    \n",
+    "\n",
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5353f848",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "cdf_file = data_dir + data_name\n",
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid22.juice_getdata_hf_sid22(cdf)\n",
+    "\"\"\"\n",
+    "data = juice_sid22.hf_sid22_shaping(data)\n",
     "\n",
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
+    "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
     "n_time = data.auto_corr.shape[0]\n",
     "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]\n",
-    "# print(data.epoch)"
+    "print(\"data size:\", data.auto_corr.shape)"
    ]
   },
   {
