--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/20"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/21"
    ]
   },
   {
@@ -27,6 +27,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
+    "import copy\n",
+    "import csv\n",
     "import datetime\n",
     "import glob"
    ]
@@ -52,9 +54,9 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib as juice_cdf\n",
-    "import juice_sid3_lib as juice_sid3\n",
-    "import juice_math_lib as juice_math"
+    "import juice_cdf_lib  as juice_cdf\n",
+    "import juice_math_lib as juice_math\n",
+    "import juice_sid3_lib as juice_sid3"
    ]
   },
   {
@@ -71,29 +73,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Mode set ***\n",
-    "band_mode = 0                           # 0: sum    1: /Hz\n",
-    "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
-    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
-    "#\n",
-    "time_mode = 0                           # 0: Epoch    1: data number\n",
+    "# *** Plot dump ***\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "\n",
-    "# *** Parameter set ***\n",
-    "cal = 2                                 # 0: background     1: CAL\n",
+    "# *** CAL set ***\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "\n",
+    "# *** Unit set ***\n",
+    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
+    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "\n",
+    "# *** Frenquency range in Linear ***\n",
+    "f_mode_min = 80;  f_mode_max = 2068     # 80 - 2068 : as same as SID-4/20\n",
+    "\n",
+    "# *** Power range set ***\n",
     "p_raw_max = 9.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 2.0                         # background: 2.5   CAL: 5\n",
     "\n",
-    "# *** Frenquency range set ***\n",
-    "f_mode_min = 800                        # 80\n",
-    "f_mode_max = 40000                      # 2068 : as same as SID-4/20\n",
-    "\n",
-    "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
-    "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54c3fbbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
+    "                 ]\n",
+    "\n",
+    "# 20240701\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/01/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240701T011127_V01.cdf',\n",
+    "                 ]\n",
+    "# 20240706\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name_list = [# 'JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID3_20240706T175202_V01.cdf',\n",
+    "                 ]\n",
+    "\"\"\""
    ]
   },
   {
@@ -103,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Ground - Ver.2 ***\n",
+    "# *** Ground Test - Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID03_20231024-0036.cdf']\n",
@@ -215,35 +241,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da144e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# *** Flight data: Ver.2 ***\n",
-    "\"\"\"\n",
-    "# 20240126\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
-    "                 ]\n",
-    "\n",
-    "# 20240701\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/01/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240701T011127_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\"\n",
-    "\n",
-    "\"\"\"\n",
-    "# 20240706\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name_list = [# 'JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
-    "                  'JUICE_L1a_RPWI-HF-SID3_20240706T175202_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "48d552ee",
    "metadata": {},
    "outputs": [],
@@ -314,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Prelaunch - Ver.1 ***\n",
+    "# *** Ground Test - Ver.1 ***\n",
     "\"\"\"\n",
     "# *** 202105\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202105/'        # CDF data folder\n",
@@ -377,8 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
     "# *** Group read\n",
+    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240716/'        # CDF data folder\n",
     "data_name = '*SID3*.cdf'\n",
     "cdf_file = data_dir + data_name\n",
@@ -427,7 +424,7 @@
     "        data = juice_sid3.hf_sid3_add(data, data1)\n",
     "        print(data.EuEu.shape)    \n",
     "\n",
-    "data_name = os.path.split(data_name)[1];  print(data_name)"
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
    ]
   },
   {
@@ -437,17 +434,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
+    "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
-    "n_time0 = data.EuEu.shape[0]\n",
-    "n_freq0 = data.EuEu.shape[1]\n",
-    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
-    "# print(data.epoch)"
+    "n_time0 = data.EuEu.shape[0];   n_freq0 = data.EuEu.shape[1]\n",
+    "f_min0 = data.frequency[0][0];  f_max0 = (max(np.ravel(data.frequency)))"
    ]
   },
   {
@@ -458,21 +450,21 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "N_ch = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "if (data.complex[0] == 0):\n",
-    "    if N_ch == 3:\n",
+    "    if N_ch0 == 3:\n",
     "        print(\"complex:\", data.complex[0], \" (power 3-ch) <Table 6.2.2>\")\n",
     "    else:\n",
     "        print(\"complex:\", data.complex[0], \" (power 2-ch) <Table 6.2.3>\")\n",
-    "    N_component = N_ch\n",
+    "    N_component = N_ch0\n",
     "elif (data.complex[0] == 1):\n",
-    "    if N_ch == 3:\n",
+    "    if N_ch0 == 3:\n",
     "        print(\"complex:\", data.complex[0], \" (nominal spectral matrix 3-ch) <Table 6.2.4>\")\n",
     "    else:\n",
     "        print(\"complex:\", data.complex[0], \" (nominal spectral matrix 2-ch) <Table 6.2.5>\")\n",
-    "    N_component = N_ch * N_ch\n",
+    "    N_component = N_ch0 * N_ch0\n",
     "elif (data.complex[0] == 2):\n",
-    "    if N_ch == 3:\n",
+    "    if N_ch0 == 3:\n",
     "        N_component = 27 + 3\n",
     "        print(\"complex:\", data.complex[0], \" (Polarization separation 3-ch) <Table 6.2.6>\")\n",
     "    else:\n",
@@ -481,7 +473,9 @@
     "else:\n",
     "    print(\"complex:\", data.complex[0], \" (3D spectral matrix 3-ch) <Table 6.2.8>\")\n",
     "    N_component = 21\n",
-    "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
+    "\n",
+    "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
+    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
     "print(\"BG_downlink:\", data.BG_downlink[0])\n",
     "print(\"RFI_rejection:\", data.RFI_rejection[0])\n",
     "N_frequency = data.frequency.shape[1]\n",
@@ -535,6 +529,26 @@
     "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)\n",
     "\n",
     "# print(freq1); print(freq_width1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bee456fd",
+   "metadata": {},
+   "source": [
+    "## CAL Waveform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1200e4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Conversion factor: cal_mode ***\n",
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
@@ -661,7 +675,7 @@
     "\"\"\"\n",
     "# range: Y-axis\n",
     "if data.complex[0] > 0:    # Matrix\n",
-    "    if N_ch < 3:\n",
+    "    if N_ch0 < 3:\n",
     "        ylim=[-10**(p_raw_max-3), 10**(p_raw_max-3)];  ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
     "    ylim=[-1.05, 1.05]; ax5.set_ylim(ylim)\n",
@@ -873,7 +887,7 @@
     "    ylim=[-0.05, 1.05]; ax5.set_ylim(ylim);  ax4.set_ylim(ylim); \n",
     "    ylim=[-1.05, 1.05]; ax6.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax7.set_ylim(ylim)\n",
-    "    if N_ch < 3:\n",
+    "    if N_ch0 < 3:\n",
     "        ylim=[-10**(p_raw_max-3), 10**(p_raw_max-3)];  ax3.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
