--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/7/20"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/7/21"
    ]
   },
   {
@@ -28,6 +28,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
+    "import copy\n",
+    "import csv\n",
     "import datetime\n",
     "import glob"
    ]
@@ -55,9 +57,9 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib as juice_cdf\n",
-    "import juice_sid20_lib as juice_sid20\n",
-    "import juice_math_lib as juice_math"
+    "import juice_cdf_lib   as juice_cdf\n",
+    "import juice_math_lib  as juice_math\n",
+    "import juice_sid20_lib as juice_sid20"
    ]
   },
   {
@@ -76,25 +78,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Mode set ***\n",
-    "band_mode = 0                           # 0: sum    1: /Hz\n",
-    "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
-    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
-    "#\n",
-    "time_mode = 0                           # 0: Epoch    1: data number\n",
+    "# *** Plot dump ***\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "\n",
-    "# *** Parameter set ***\n",
-    "cal = 0                                 # 0: background     1: CAL\n",
+    "# *** CAL set ***\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "\n",
+    "# *** Unit set ***\n",
+    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
+    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "\n",
+    "# *** Frenquency range in Linear ***\n",
+    "# f_mode_min = 80;  f_mode_max = 2068   # 80 - 2068 : as same as SID-4/20\n",
+    "\n",
+    "# *** Power range set ***\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
-    "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
-    "\n",
     "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n"
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2090ddd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240126T113714_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID20_20240126T114800_V01.cdf',\n",
+    "                  ]\n",
+    "\"\"\"\n",
+    "\n",
+    "# 202407 -- CO2\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240706T121424_V01.cdf',\n",
+    "                 ]"
    ]
   },
   {
@@ -104,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Ver.2 ***\n",
+    "# *** Ground Test - Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID20_20231024-0042.cdf']\n",
@@ -125,7 +151,7 @@
     "data_name_list = ['SID20_RPWI_NEWv2_SCI.cdf']\n",
     "\n",
     "# *** Ver.3 ***\n",
-    "# 202402 -- ASW3\n",
+    "# 202402\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/IRFU/cdf/'        # 202312_FS test folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240201.cdf']\n",
     "\n",
@@ -137,28 +163,6 @@
     "                  'JUICE_L1a_RPWI-HF-SID20_20000108T061058-20000108T061531_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-2_2024_05_15_16_07_58\n",
     "                 ]\n",
     "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af2e60cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# *** Flight data: Ver.2 ***\n",
-    "\"\"\"\n",
-    "# 20240126\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240126T113714_V01.cdf',\n",
-    "                  'JUICE_L1a_RPWI-HF-SID20_20240126T114800_V01.cdf',\n",
-    "                  ]\n",
-    "\"\"\"\n",
-    "\n",
-    "# 202407 -- CO2\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240706T121424_V01.cdf',\n",
-    "                 ]"
    ]
   },
   {
@@ -218,23 +222,7 @@
     "        data = juice_sid20.hf_sid20_add(data, data1)\n",
     "        print(data.EuEu.shape)    \n",
     "\n",
-    "data_name = os.path.split(data_name)[1];  print(data_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "379798df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "cdf_file = data_dir + data_name\n",
-    "%ls $cdf_file\n",
-    "\n",
-    "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid20.juice_getdata_hf_sid20(cdf, cf)\n",
-    "\"\"\""
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
    ]
   },
   {
@@ -244,40 +232,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
+    "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
-    "n_freq0 = data.EuEu.shape[1]\n",
-    "n_time0 = data.EuEu.shape[0]\n",
-    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
-    "# print(data.epoch)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5353f848",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
-    "\n",
-    "n_freq = data.EuEu.shape[1]\n",
-    "n_time = data.EuEu.shape[0]\n",
-    "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.EuEu.shape, n_time, n_freq)\n",
-    "# print(data.epoch)\n",
-    "\"\"\""
+    "n_time0 = data.EuEu.shape[0];   n_freq0 = data.EuEu.shape[1]\n",
+    "f_min0 = data.frequency[0][0];  f_max0 = (max(np.ravel(data.frequency)))"
    ]
   },
   {
@@ -288,7 +248,7 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "N_ch = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "if (data.complex[0] == 0):\n",
     "    print(\"complex:\", data.complex[0], \" (power 3-ch) <Table 6.3.2>\")\n",
     "    N_component = 3\n",
@@ -298,7 +258,9 @@
     "else:\n",
     "    print(\"complex:\", data.complex[0], \" (3D spectral matrix 3-ch) <Table 6.3.4>\")\n",
     "    N_component = 21\n",
-    "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
+    "\n",
+    "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
+    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
     "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time0)"
    ]
@@ -364,6 +326,26 @@
     "print(power_str, \"   f_MAX/min:\", f_max0, f_min0, \"   num of f, step, window:\", N_frequency, data.freq_step[0][0], data.freq_width[0][0])\n",
     "\n",
     "# print(freq1); print(freq_width1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f66046cd",
+   "metadata": {},
+   "source": [
+    "## CAL Waveform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "024edab5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Conversion factor: cal_mode ***\n",
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
