--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/7/9"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/7/21"
    ]
   },
   {
@@ -27,7 +27,11 @@
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors"
+    "import matplotlib.colors as colors\n",
+    "import copy\n",
+    "import csv\n",
+    "import datetime\n",
+    "import glob"
    ]
   },
   {
@@ -53,8 +57,8 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib as juice_cdf\n",
-    "import juice_math_lib as juice_math\n",
+    "import juice_cdf_lib   as juice_cdf\n",
+    "import juice_math_lib  as juice_math\n",
     "import juice_sid23_lib as juice_sid23"
    ]
   },
@@ -74,22 +78,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Mode set ***\n",
+    "# *** Plot dump ***\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
+    "\n",
+    "# *** CAL set ***\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
-    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "\n",
+    "# *** Unit set ***\n",
+    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
+    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "\n",
+    "# *** Frenquency range in Linear ***\n",
+    "# f_mode_min = 3000;   f_mode_max = 10000\n",
     "\n",
     "# *** Parameter set ***\n",
-    "cal = 0                                 # 0: background     1: CAL\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
-    "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
-    "\n",
+    "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66257406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf',\n",
+    "                  #'JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf',\n",
+    "                  ]\n",
+    "\n",
+    "\"\"\"\n",
+    "# 202407 -- CO2\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20240706T023200_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20240706T124753_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20240706T130407_V01.cdf',\n",
+    "                 ]\n",
+    "\"\"\""
    ]
   },
   {
@@ -99,72 +132,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Ground Test data: Ver.2 ***\n",
+    "# *** Ground Test - Ver.2 ***\n",
     "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name = 'SID23_20231024-0011.cdf'\n",
-    "data_name = 'SID23_20231024-0024.cdf'\n",
-    "data_name = 'SID23_20231024-0034.cdf'\n",
+    "data_name_list = ['SID23_20231024-0011.cdf',\n",
+    "                  'SID23_20231024-0024.cdf',\n",
+    "                  'SID23_20231024-0034.cdf',\n",
+    "                 ]\n",
     "\n",
     "# 202311 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID23_Seq07.cdf'\n",
-    "data_name = 'SID23_Seq08.cdf'\n",
-    "data_name = 'SID23_Seq09.cdf'\n",
+    "data_name_list = ['SID23_Seq07.cdf',\n",
+    "                  'SID23_Seq08.cdf',\n",
+    "                  'SID23_Seq09.cdf',\n",
+    "                 ]\n",
     "\n",
     "# 202405 -- dryrun check\n",
     "# TEST\n",
     "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf'    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
-    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
-    "#                 ]\n",
-    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
-    "#                 ]\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
+    "                 ]\n",
     "\n",
     "# LGA\n",
     "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T060822-20000108T061002_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T062045-20000108T062245_V01___TMIDX_00001.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T062325-20000108T062525_V01___TMIDX_00002.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T062605-20000108T062725_V01___TMIDX_00003.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf'    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20000108T064154-20000108T064314_V01___TMIDX_00001.bin.cdf'    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
-    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T060822-20000108T061002_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T062025-20000108T062245_V01___TMIDX_00001.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T062305-20000108T062525_V01___TMIDX_00002.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T062605-20000108T062725_V01___TMIDX_00003.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
-    "#                 ]\n",
-    "#data_name_list = [\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID23_20000108T064154-20000108T064314_V01___TMIDX_00001.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
-    "#                 ]\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID23_20000108T060822-20000108T061002_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T062025-20000108T062245_V01___TMIDX_00001.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T062305-20000108T062525_V01___TMIDX_00002.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T062605-20000108T062725_V01___TMIDX_00003.bin.cdf',    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID23_20000108T064154-20000108T064314_V01___TMIDX_00001.bin.cdf',    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
+    "                 ]\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15a8cdd",
+   "id": "5f873fab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Flight data: Ver.2 ***\n",
+    "# *** Group read\n",
     "\"\"\"\n",
-    "# 20240126\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf'\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf'\n",
-    "\"\"\"\n",
-    "\n",
-    "# 202407 -- CO2\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240706T023200_V01.cdf'\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240706T124753_V01.cdf'\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240706T130407_V01.cdf'"
+    "import glob\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
+    "data_name = 'SID23*.cdf'\n",
+    "cdf_file = data_dir + data_name\n",
+    "data_name_list = glob.glob(cdf_file)\n",
+    "num_list = len(data_name_list)\n",
+    "data_name_list.sort()\n",
+    "for i in range(num_list):\n",
+    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
+    "\"\"\""
    ]
   },
   {
@@ -179,28 +201,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99fd8ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class struct:\n",
+    "    pass\n",
+    "\n",
+    "data = struct()\n",
+    "num_list = len(data_name_list)\n",
+    "\n",
+    "for i in range(num_list):\n",
+    "    data_name = data_name_list[i]\n",
+    "    cdf_file = data_dir + data_name\n",
+    "    print(i, cdf_file)\n",
+    "\n",
+    "    cdf = pycdf.CDF(cdf_file)\n",
+    "    data1 = juice_sid23.hf_sid23_read(cdf)\n",
+    "\n",
+    "    if i==0:\n",
+    "        data = data1\n",
+    "        print(data.Eu_i.shape)\n",
+    "    else:\n",
+    "        data = juice_sid23.hf_sid23_add(data, data1)\n",
+    "        print(data.Eu_i.shape)\n",
+    "\n",
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5353f848",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "cdf_file = data_dir + data_name\n",
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid23.juice_getdata_hf_sid23(cdf)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e5eee04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = juice_sid23.hf_sid23_shaping(data)\n",
+    "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
-    "\n",
-    "n_time0 = data.n_time\n",
-    "n_block0 = data.time.shape[1]\n",
-    "n_length0 = data.time.shape[2]\n",
+    "n_time0 = data.n_time;  n_block0 = data.time.shape[1];  n_length0 = data.time.shape[2]\n",
     "n_num0 = n_block0 * n_length0 \n",
-    "# print(data.epoch)"
+    "print(data.time.shape)"
    ]
   },
   {
@@ -211,10 +270,31 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "N_ch = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
-    "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
-    "print(\"==> Num-samples:\", n_time0, \"   Num-Block:\", n_block0, \" * Length:\", n_length0, \" = Num:\", n_num0)\n",
-    "print(\"    time_length:\", data.time[0][0][n_length0-1], data.time[0][1][0], \"sec in 1-block\", data.time[0][n_block0-1][n_length0-1], \"sec in total\")"
+    "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "\n",
+    "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
+    "print(\"Num-samples:\", n_time0, \"   Num-Block:\", n_block0, \" * Length:\", n_length0, \" = Num:\", n_num0)\n",
+    "print(\"time_length:\", data.time[0][0][n_length0-1], data.time[0][1][0], \"sec in 1-block\", data.time[0][n_block0-1][n_length0-1], \"sec in total\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00e41664",
+   "metadata": {},
+   "source": [
+    "## CAL Waveform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e9ff650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Conversion factor: cal_mode ***\n",
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
@@ -403,8 +483,7 @@
     "spec = juice_sid23.hf_sid23_getspec(data, band_mode)\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
     "#\n",
-    "f_min = spec.freq[0]\n",
-    "f_max = spec.freq[n_length0-1]\n",
+    "f_min = spec.freq[0];  f_max = spec.freq[n_length0-1]\n",
     "d_freq = spec.freq[1]-spec.freq[0]\n",
     "\n",
     "print(spec.EE.shape, n_time0, n_block0, n_length0)\n",
@@ -734,8 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-3\n",
+    "n_sweep = np.int16(n_time0//2)\n",
     "print(\"[mid]  SWEEP:\", n_num0, \"in total of\", n_time0)\n",
     "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
