--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/7/17"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/7/21"
    ]
   },
   {
@@ -29,7 +29,9 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "import copy\n",
-    "import csv"
+    "import csv\n",
+    "import datetime\n",
+    "import glob"
    ]
   },
   {
@@ -55,9 +57,9 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib  as juice_cdf\n",
-    "import juice_math_lib as juice_math\n",
-    "import juice_sid2_lib as juice_sid2\n",
+    "import juice_cdf_lib   as juice_cdf\n",
+    "import juice_math_lib  as juice_math\n",
+    "import juice_sid2_lib  as juice_sid2\n",
     "import juice_sid2_spec as juice_spec"
    ]
   },
@@ -89,12 +91,12 @@
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
     "\n",
-    "# *** Frenquency range set ***\n",
+    "# *** Frenquency range in Linear ***\n",
     "f_mode_min = 3000;   f_mode_max = 10000\n",
     "\n",
     "# *** Power range set ***\n",
-    "p_raw_max = 7.0                         #              background: 7.5   CAL: 10\n",
-    "p_raw_min = 0.0                         #              background: 2.5   CAL: 5\n",
+    "p_raw_max = 7.0                         # background: 7.5   CAL: 10\n",
+    "p_raw_min = 0.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
@@ -107,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Flight data - Ver.2 ***\n",
+    "# *** Flight - Ver.2 ***\n",
     "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'           # CDF data folder\n",
@@ -125,7 +127,6 @@
    "outputs": [],
    "source": [
     "# *** Ground Test - Ver.2 ***\n",
-    "\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'         # CDF data folder\n",
     "data_name_list = [#'SID02_20231007-0349.cdf',                               # SG - 1.0MHz 10mVpp 90/0/0deg\n",
@@ -162,10 +163,7 @@
     "                  'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_21_no_jump.bin.cdf',  # Num-Frequency: 512    Length: 32      Frequency, width, step (kHz): 80.0 - 45000.0 111.9768 87.90607\n",
     "                  #'JUICE_L1a_RPWI-HF-SID2_high.cdf',                   # Num-Frequency: 192    Length: 512     Frequency, width, step (kHz): 210.0 - 42421.0 222.0 221.0\n",
     "                 ]\n",
-    "\"\"\"\n",
     "\n",
-    "\"\"\"\n",
-    "# ***** Following is similar to the latest operation, except the highest frequency setting. *****\n",
     "# 202405 -- dryrun check\n",
     "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20000108T044504-20000108T044719_V01___TMIDX_00000.bin.cdf',   # pc2_rpwi_hf_fft_sid2_2024_05_15_14_41_35\n",
@@ -295,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Ground - Ver.1\n",
+    "# *** Ground Test - Ver.1 ***\n",
     "\"\"\"\n",
     "# *** 202105 ***\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202105/'        # CDF data folder\n",
@@ -445,7 +443,7 @@
     "        data = juice_sid2.hf_sid2_add(data, data1)\n",
     "        print(data.Eu_i.shape)\n",
     "\n",
-    "print(\"path name:\", data_name);  data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
    ]
   },
   {
@@ -458,14 +456,10 @@
     "data = juice_sid2.hf_sid2_shaping(data)\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
-    "n_time0 = data.Eu_i.shape[0]\n",
-    "n_freq0 = data.Eu_i.shape[1]\n",
-    "n_samp0 = data.Eu_i.shape[2]\n",
-    "f_min0 = data.frequency[0][0][0]\n",
-    "f_max0 = (max(np.ravel(data.frequency)))"
+    "n_time0 = data.Eu_i.shape[0];      n_freq0 = data.Eu_i.shape[1];  n_samp0 = data.Eu_i.shape[2]\n",
+    "f_min1 = data.frequency[0][0][0];  f_max1 = (max(np.ravel(data.frequency)))"
    ]
   },
   {
@@ -477,11 +471,19 @@
    "source": [
     "# Mode \n",
     "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "\n",
     "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "print(\"Num-samples:\", n_time0, \"   Num-Frequency:\", n_freq0, \"   Length:\", n_samp0)\n",
-    "print(\"Frequency, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
-    "print(\"Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")\n",
-    "# print(data.epoch)"
+    "print(\"Frequency, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
+    "print(\"Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0a809da",
+   "metadata": {},
+   "source": [
+    "### Mask read"
    ]
   },
   {
@@ -509,7 +511,7 @@
    "id": "a775ae5d",
    "metadata": {},
    "source": [
-    "## CAL Waveform"
+    "### CAL Waveform"
    ]
   },
   {
@@ -729,7 +731,7 @@
     "\"\"\"\n",
     "# range: Y-axis\n",
     "ylim=[-10**(p_max), 10**(p_max)];  ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
-    "ylim=[f_min0, f_max0];             ax4.set_ylim(ylim)\n",
+    "ylim=[f_min1, f_max1];             ax4.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
@@ -753,7 +755,7 @@
    "source": [
     "n_sweep0 = 0;    n_sweep1 = n_sweep0 + 3\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep0, n_sweep1, \"in total of\", n_time0)\n",
-    "f_min = f_min0;  f_max = f_max0\n",
+    "f_min = f_min1;  f_max = f_max1\n",
     "\n",
     "fig = plt.figure(figsize=(14, 14))\n",
     "ax1 = fig.add_subplot(5, 1, 1);  ax2 = fig.add_subplot(5, 1, 2);  ax3 = fig.add_subplot(5, 1, 3);  ax4 = fig.add_subplot(5, 1, 4);  ax5 = fig.add_subplot(5, 1, 5)\n",
@@ -835,7 +837,7 @@
     "# range: Y-axis\n",
     "p_max = np.ceil(np.log10( np.amax( [np.amax(data.Eu_i[n_sweep][n_step0:n_step1]), np.amax(data.Eu_q[n_sweep][n_step0:n_step1]), np.amax(data.Ev_i[n_sweep][n_step0:n_step1]), np.amax(data.Ev_q[n_sweep][n_step0:n_step1]), np.amax(data.Ew_i[n_sweep][n_step0:n_step1]), np.amax(data.Ew_q[n_sweep][n_step0:n_step1])] ) )*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
-    "#ylim=[f_min, f_max]; ax4.set_ylim(ylim)\n",
+    "#ylim=[f_min1, f_max1]; ax4.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
@@ -864,6 +866,7 @@
     "\n",
     "Epoch_1d = spec.epoch.tolist();   n_time0 = spec.EE.shape[0];  num_1d = np.arange(n_time0)\n",
     "freq_1d = spec.freq[n_time0//2];  n_freq0 = freq_1d.shape[0];  freq_width_1d = spec.freq_w[n_time0//2]\n",
+    "f_min0  = freq_1d[0]; f_max0 = freq_1d[-1]\n",
     "\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
     "print(power_str, \"   EE:\",   spec.EE.shape,   \"   freq:\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_width_1d[0], \"kHz)\" )\n",
