--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/7/9"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/7/21"
    ]
   },
   {
@@ -28,6 +28,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
+    "import copy\n",
+    "import csv\n",
     "import datetime\n",
     "import glob"
    ]
@@ -55,7 +57,7 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib as juice_cdf\n",
+    "import juice_cdf_lib  as juice_cdf\n",
     "import juice_math_lib as juice_math\n",
     "import juice_sid4_lib as juice_sid4"
    ]
@@ -76,22 +78,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Mode set ***\n",
-    "band_mode = 0                           # 0: sum    1: /Hz\n",
-    "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
-    "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
-    "#\n",
-    "time_mode = 0                           # 0: Epoch    1: data number\n",
+    "# *** Plot dump ***\n",
+    "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "\n",
-    "# *** Parameter set ***\n",
-    "cal = 0                                 # 0: background     1: CAL\n",
+    "# *** CAL set ***\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "\n",
+    "# *** Unit set ***\n",
+    "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
+    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "\n",
+    "# *** Frenquency range in Linear ***\n",
+    "# f_mode_min = 80;  f_mode_max = 2068   # 80 - 2068 : as same as SID-4/20\n",
+    "\n",
+    "# *** Power range set ***\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
-    "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
+    "# *** Directory set: set by User ***\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4a7fdff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240126T113727_V01.cdf',\n",
+    "                 ]\n",
+    "\"\"\"\n",
+    "\n",
+    "# 202407 -- CO2\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240706T121439_V01.cdf',\n",
+    "                 ]"
    ]
   },
   {
@@ -101,10 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "\n",
-    "# *** Ver.2 ***\n",
+    "# *** Ground Test - Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID04_20231024-0042.cdf',\n",
@@ -141,28 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32298bd8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# *** Flight data: Ver.2 ***\n",
-    "\n",
-    "\"\"\"\n",
-    "# 20240126\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240126T113727_V01.cdf',\n",
-    "                 ]\n",
-    "\"\"\"\n",
-    "\n",
-    "# 202407 -- CO2\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID4_20240706T121439_V01.cdf',\n",
-    "                 ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "eab642ad",
    "metadata": {},
    "outputs": [],
@@ -170,7 +173,7 @@
     "# *** Group read\n",
     "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/05/23/'        # CDF data folder\n",
-    "data_name = '*SID20*.cdf'\n",
+    "data_name = '*SID4*.cdf'\n",
     "cdf_file = data_dir + data_name\n",
     "data_name_list = glob.glob(cdf_file)\n",
     "num_list = len(data_name_list)\n",
@@ -217,23 +220,7 @@
     "        data = juice_sid4.hf_sid4_add(data, data1)\n",
     "        print(data.EuEu.shape)    \n",
     "\n",
-    "data_name = os.path.split(data_name)[1];  print(data_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5353f848",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "cdf_file = data_dir + data_name\n",
-    "%ls $cdf_file\n",
-    "\n",
-    "cdf = pycdf.CDF(cdf_file)\n",
-    "data = juice_sid4.juice_getdata_hf_sid4(cdf, cf)\n",
-    "\"\"\""
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
    ]
   },
   {
@@ -243,17 +230,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
+    "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
-    "n_freq0 = data.EuEu.shape[1]\n",
-    "n_time0 = data.EuEu.shape[0]\n",
-    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
-    "# print(data.epoch)"
+    "n_time0 = data.EuEu.shape[0];   n_freq0 = data.EuEu.shape[1]\n",
+    "f_min0 = data.frequency[0][0];  f_max0 = (max(np.ravel(data.frequency)))"
    ]
   },
   {
@@ -264,7 +246,7 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "N_ch = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "if (data.complex[0] == 0):\n",
     "    print(\"complex:\", data.complex[0], \" (power 3-ch) <Table 6.4.2>\")\n",
     "    N_component = 3\n",
@@ -274,7 +256,9 @@
     "else:\n",
     "    print(\"complex:\", data.complex[0], \" (3D spectral matrix 3-ch) <Table 6.4.4>\")\n",
     "    N_component = 21\n",
-    "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
+    "\n",
+    "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
+    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
     "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time0)"
    ]
@@ -328,6 +312,26 @@
     "print(power_str, \"   f_MAX/min:\", f_max0, f_min0, \"   num of f, step, window:\", N_frequency, data.freq_step[0][0], data.freq_width[0][0])\n",
     "\n",
     "# print(freq1); print(freq_width1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f73b18f4",
+   "metadata": {},
+   "source": [
+    "## CAL Waveform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06cebe17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Conversion factor: cal_mode ***\n",
+    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
