--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/2/2"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/7/21"
    ]
   },
   {
@@ -104,14 +104,36 @@
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name = 'SID05_20231024-0046.cdf'\n",
-    "data_name = 'SID05_20231117-1603.cdf'\n",
-    "data_name = 'SID05_20231117-1611.cdf'\n",
+    "data_name_list = ['SID05_20231024-0046.cdf',\n",
+    "                  'SID05_20231117-1603.cdf',\n",
+    "                  'SID05_20231117-1611.cdf',\n",
+    "                 ]\n",
     "\n",
     "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID05_Seq05.cdf'\n",
+    "data_name_list = ['SID05_Seq05.cdf',\n",
+    "                 ]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09aa96b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Group read\n",
+    "\"\"\"\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/05/23/'        # CDF data folder\n",
+    "data_name = '*SID4*.cdf'\n",
+    "cdf_file = data_dir + data_name\n",
+    "data_name_list = glob.glob(cdf_file)\n",
+    "num_list = len(data_name_list)\n",
+    "data_name_list.sort()\n",
+    "for i in range(num_list):\n",
+    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
     "\"\"\""
    ]
   },
@@ -127,25 +149,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ed06dca2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class struct:\n",
+    "    pass\n",
+    "\n",
+    "data = struct()\n",
+    "num_list = len(data_name_list)\n",
+    "\n",
+    "for i in range(num_list):\n",
+    "    data_name = data_name_list[i]\n",
+    "    cdf_file = data_dir + data_name\n",
+    "    print(i, cdf_file)\n",
+    "\n",
+    "    cdf = pycdf.CDF(cdf_file)\n",
+    "    data1 = juice_sid5.hf_sid5_read(cdf)\n",
+    "\n",
+    "    if i==0:\n",
+    "        data = data1\n",
+    "        print(data.EE.shape)\n",
+    "    else:\n",
+    "        data = juice_sid5.hf_sid5_add(data, data1)\n",
+    "        print(data.EE.shape)    \n",
+    "\n",
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5353f848",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "cdf_file = data_dir + data_name\n",
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid5.juice_getdata_hf_sid5(cdf)\n",
+    "\"\"\"\n",
+    "data = juice_sid5.hf_sid5_shaping(data)\n",
     "\n",
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
+    "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
-    "n_freq = data.EE.shape[1]\n",
-    "n_time = data.EE.shape[0]\n",
+    "n_time = data.EE.shape[0];  n_freq = data.EE.shape[1]\n",
     "n_time0 = n_time-1\n",
     "print(\"data size:\", data.EE.shape, n_time, n_freq)"
    ]
