--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -103,44 +103,34 @@
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name = 'SID07_20231024-0011.cdf'\n",
-    "data_name = 'SID07_20231024-0024.cdf'\n",
-    "data_name = 'SID07_20231024-0034.cdf'\n",
+    "data_name_list = ['SID07_20231024-0011.cdf',\n",
+    "                  'SID07_20231024-0024.cdf',\n",
+    "                  'SID07_20231024-0034.cdf',\n",
+    "                 ]\n",
     "\n",
     "# 202311 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID07_Seq07.cdf'\n",
-    "#data_name = 'SID07_Seq08.cdf'\n",
-    "#data_name = 'SID07_Seq09.cdf'\n",
+    "data_name_list = ['SID07_Seq07.cdf',\n",
+    "                  'SID07_Seq08.cdf',\n",
+    "                  'SID07_Seq09.cdf',\n",
+    "                 ]\n",
     "\n",
     "# 202405 -- dryrun check\n",
     "# TEST\n",
     "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/1_first_parts/'\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf'    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
-    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID7_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
-    "#                 ]\n",
-    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID7_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
-    "#                 ]\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID7_20000108T045452-20000108T045711_V01___TMIDX_00000.bin.cdf',    # 400kHz  pc2_rpwi_pssr3_test_2024_05_15_14_51_46\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20000108T045849-20000108T045916_V01___TMIDX_00000.bin.cdf',    # 9MHz    pc2_rpwi_pssr3_9MHz_2024_05_15_14_55_51\n",
+    "                 ]\n",
     "# LGA\n",
     "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T060822-20000108T060942_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T062025-20000108T062245_V01___TMIDX_00001.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T062305-20000108T062525_V01___TMIDX_00002.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T062545-20000108T062725_V01___TMIDX_00003.bin.cdf'    # 9MHz    pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf'    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20000108T064134-20000108T064314_V01___TMIDX_00001.bin.cdf'    # 400kHz  pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
-    "#data_name_list = ['JUICE_L1a_RPWI-HF-SID7_20000108T060822-20000108T060942_V01___TMIDX_00000.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID7_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID7_20000108T062025-20000108T062245_V01___TMIDX_00001.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID7_20000108T062305-20000108T062525_V01___TMIDX_00002.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID7_20000108T062545-20000108T062725_V01___TMIDX_00003.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID7_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
-    "#                  'JUICE_L1a_RPWI-HF-SID7_20000108T064134-20000108T064314_V01___TMIDX_00001.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
-    "#                 ]\n",
-    "\"\"\"\n",
-    "\"\"\""
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID7_20000108T060822-20000108T060942_V01___TMIDX_00000.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-1_2024_05_15_16_05_11\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20000108T061805-20000108T062005_V01___TMIDX_00000.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20000108T062025-20000108T062245_V01___TMIDX_00001.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM01\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20000108T062305-20000108T062525_V01___TMIDX_00002.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM02\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20000108T062545-20000108T062725_V01___TMIDX_00003.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08b-2_2024_05_15_16_14_58/TM03\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20000108T063854-20000108T064114_V01___TMIDX_00000.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM00\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20000108T064134-20000108T064314_V01___TMIDX_00001.bin.cdf',    # pc2_LGA-dryrun_RPW-SEQ-08a-2_2024_05_15_16_35_43/TM01\n",
+    "                 ]"
    ]
   },
   {
@@ -151,16 +141,36 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
-    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20240126T092930_V01.cdf'\n",
-    "\"\"\"\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID7_20240126T092930_V01.cdf',\n",
+    "                 ]\n",
     "\n",
     "# 202407 -- CO2\n",
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20240706T023200_V01.cdf'\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20240706T124753_V01.cdf'"
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID7_20240706T023200_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID7_20240706T124753_V01.cdf',\n",
+    "                 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8095acda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Group read\n",
+    "\"\"\"\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/05/23/'        # CDF data folder\n",
+    "data_name = '*SID4*.cdf'\n",
+    "cdf_file = data_dir + data_name\n",
+    "data_name_list = glob.glob(cdf_file)\n",
+    "num_list = len(data_name_list)\n",
+    "data_name_list.sort()\n",
+    "for i in range(num_list):\n",
+    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
+    "\"\"\""
    ]
   },
   {
@@ -175,29 +185,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "07716e24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class struct:\n",
+    "    pass\n",
+    "\n",
+    "data = struct()\n",
+    "num_list = len(data_name_list)\n",
+    "\n",
+    "for i in range(num_list):\n",
+    "    data_name = data_name_list[i]\n",
+    "    cdf_file = data_dir + data_name\n",
+    "    print(i, cdf_file)\n",
+    "\n",
+    "    cdf = pycdf.CDF(cdf_file)\n",
+    "    data1 = juice_sid7.hf_sid7_read(cdf)\n",
+    "\n",
+    "    if i==0:\n",
+    "        data = data1\n",
+    "        print(data.auto_corr.shape)\n",
+    "    else:\n",
+    "        data = juice_sid7.hf_sid7_add(data, data1)\n",
+    "        print(data.auto_corr.shape)\n",
+    "\n",
+    "data_name = os.path.split(data_name)[1];  print(\"data name:\", data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5353f848",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "cdf_file = data_dir + data_name\n",
     "%ls $cdf_file\n",
     "\n",
     "cdf = pycdf.CDF(cdf_file)\n",
     "data = juice_sid7.juice_getdata_hf_sid7(cdf)\n",
+    "\"\"\"\n",
+    "data = juice_sid7.hf_sid7_shaping(data)\n",
     "\n",
-    "date1 = data.epoch[0]\n",
-    "date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
-    "date2 = data.epoch[-1]\n",
-    "date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
-    "str_date = date1 + \"  -  \" + date2\n",
-    "print(str_date)\n",
+    "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
+    "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
+    "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
     "\n",
     "n_time0 = data.n_time - 1\n",
     "n_block0 = data.N_block[0]\n",
     "n_length0 = data.N_samp_AUX[0]\n",
     "freq_center = data.freq_center[0]\n",
-    "print(\"data size:\", data.auto_corr.shape, \" frequency_center:\", freq_center, \"[kHz]\")\n",
-    "# print(data.epoch)"
+    "print(\"data size:\", data.auto_corr.shape, \" frequency_center:\", freq_center, \"[kHz]\")"
    ]
   },
   {
